# Taskonomics

./: Dockerfile  LICENSE  README.md  fly.toml  manage.py  pyproject.toml
base/: admin.py  forms.py  models.py
base/api/: serializers.py  tests.py  urls.py  views.py
base/migrations/: 0001_initial.py
taskonomics/: asgi.py  settings.py  urls.py  wsgi.py
