[tool.poetry]
name = "taskonomics"
version = "0.1.0"
description = "Taskonomics: Where Tasks Mean Business"
authors = ["Advik <adviksingh6632@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
